...
            'Traffic Light',
            Icons.traffic,
            Colors.amber,
            () => {/* TODO */},
          ),
          _buildDashboardItem(
            'Settings',
            Icons.settings,
            Colors.grey,
            () => {/* TODO */},
          ),
        ],
      ),
...
